# code_versus

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pipeline  pyproject.toml  requirements.txt  sample_test.py  task.py
client/: api.py  config.py  data.json  dependencies.py  jwt.py  main.py  utils.py  windows.py
client_console/: api.py  data.json  exceptions.py  main.py  utils.py  windows.py
client_web/: index.html  question.html  task.html
client_web/scripts/: index.js
client_web/styles/: task.css
client_web_snippet/: task.html
client_web_snippet/scripts/: index.js
client_web_snippet/styles/: style.css  task.css
core/api/CodeVersusAPI/: manage.py
core/api/CodeVersusAPI/CodeVersusAPI/: __init__.py  asgi.py  celery.py  celery_broker.py  exceptions.py  permissions.py  redis_handler.py  settings.py  urls.py  wsgi.py
core/api/CodeVersusAPI/qa_tasks/: admin.py  apps.py  models.py
core/api/CodeVersusAPI/questions/: admin.py  ai_service.py  models.py  serializers.py  services.py  views.py
core/api/CodeVersusAPI/questions/migrations/: 0001_initial.py  0002_alter_answer_title_alter_question_title.py
core/api/CodeVersusAPI/tasks/: broker_tasks.py  models.py  permissions.py  serializers.py  services.py  views.py
core/api/CodeVersusAPI/tasks/migrations/: 0001_initial.py  0002_tasklevel_alter_task_description_alter_task_level.py  0003_alter_task_description_test.py  0004_alter_test_user.py  0005_remove_test_task_remove_test_user_and_more.py  (+3 more)
core/api/CodeVersusAPI/users/: mailing.py  models.py  serializers.py  services.py  tasks.py  views.py
core/test_system/: Dockerfile  models.py  requirements.txt  rpc_server.py  test_storage.py  test_system.py  utils.py
(+8 files in other folders)
