[tool.poetry]
name = "code-versus"
version = "0.1.0"
description = ""
authors = ["Yakublevich Renat <49581209+dop3file@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "code_versus"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

