[tool.poetry]
name = "code-versus"
version = "0.1.0"
description = ""
authors = ["Yakublevich Renat <49581209+dop3file@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "code_versus"}]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.3"
django = "^4.2.2"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

