[tool.poetry]
name = "code-versus"
version = "0.1.0"
description = ""
authors = ["Yakublevich Renat <49581209+dop3file@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "code_versus"}]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.3"
django = "^4.2.2"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
python-dotenv = "^1.0.0"
celery = "^5.3.1"
redis = "^4.6.0"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
pyro4 = "^4.82"
colorama = "^0.4.6"
rich = "^13.4.2"
getpass4 = "^0.0.14.1"
aiohttp = "^3.8.4"
django-cors-headers = "^4.2.0"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

